@@ -14,6 +14,9 @@ Version 1.7
 
   * Clay (PR#184)
   * Perl 6 (PR#181)
+  * Swig (PR#168)
+  * nesC (PR#166)
+  * BlitzBasic (PR#197)
 
 - Pygments will now recognize "vim" modelines when guessing the lexer for
   a file based on content (PR#118).
@@ -29,6 +32,14 @@ Version 1.7
   guessing so that plain XML isn't always taken as Lasso (PR#163).
 
 - Objective C/C++ lexers: allow "@" prefixing any expression (#871).
+
+- Ruby lexer: fix lexing of Name::Space tokens (#860).
+
+- Stan lexer: update for version 1.3.0 of the language (PR#162).
+
+- JavaScript lexer: add the "yield" keyword (PR#196).
+
+- HTTP lexer: support for PATCH method (PR#190).
 
 
 Version 1.6
